# git-worktree-manager

./: 02-PRD.md  03-技术方案.md  04-测试用例.md  05-测试报告.md  09-AI评审技术方案.md  CHANGELOG.md  CLAUDE.md  README.md  README_EN.md  RELEASE.md  install.ps1  install.sh  release.sh  verify-manifest.sh
.github/workflows/: ci.yml  labeler.yml  release.yml  stale.yml  update-tap.yml
.husky/: pre-commit
bugs/: BUG-001-open-worktree-command-missing.md  BUG-002-detached-head-status-missing.md  BUG-003-input-validation-missing.md  BUG-004-csp-not-configured.md
code/: .env.example  .eslintrc.json  .gitignore  .prettierignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
code/.github/workflows/: release.yml
code/.husky/: pre-commit
code/docs/: 06-回归测试报告.md
code/src/: App.tsx  index.css  main.tsx  setupTests.ts
code/src-tauri/: Cargo.toml  tauri.conf.json
code/src-tauri/capabilities/: default.json
code/src-tauri/icons/: icon.icns
code/src-tauri/src/: lib.rs  main.rs
code/src-tauri/src/commands/: ai_review.rs  conflict.rs  log.rs  merge.rs  mod.rs  worktree.rs
code/src-tauri/src/models/: ai.rs  backup.rs  conflict.rs  error.rs  hotfix.rs  log.rs  merge.rs  mod.rs  worktree.rs
code/src-tauri/src/services/: ai_service.rs  backup_service.rs  conflict_service.rs  diff_service.rs  editor_service.rs  git_service.rs  hotfix_service.rs  log_service.rs  merge_service.rs  mod.rs  worktree_service.rs
code/src-tauri/src/utils/: validation.rs
code/src/components/: ErrorBoundary.tsx
code/src/hooks/: useKeyboardShortcuts.ts  useTheme.ts  useToast.tsx
code/src/i18n/: index.ts
code/src/services/: ai.ts  annotations.ts  git.ts  index.ts  shell.ts
code/src/stores/: aiReviewStore.ts  groupsStore.ts  index.ts  repositoryStore.ts  settingsStore.ts  updateStore.ts  worktreeStore.ts
code/src/types/: ai.ts  annotation.ts  config.ts  conflict.ts  group.ts  index.ts  log.ts  worktree.ts
design-styles/: DESIGN-cursor.md  DESIGN-default.md  DESIGN-linear.md  DESIGN-warp.md  README.md
docs/: 03-技术方案.md  04-测试用例.md  05-测试报告.md  08-AI评审PRD.md  PRD.md  RELEASE.md  技术方案.md
(+73 files in other folders)
